...
    <string name="opening_hours_dont_set">Opening hours dont set</string>
    <!-- Map Activity End -->

    <!-- Setting Activity -->
    <string name="scope_updated">Your scope has been updated</string>
    <string name="scope_dont_updated">Your scope hasn\'t been updated</string>
    <string name="scope_between">Your scope must be between 2km and 10km</string>
    <string name="picture_updated">Your profile picture has been updated</string>
    <string name="update_pseudo">Update Your Pseudo</string>
    <string name="enter_pseudo">Enter your new pseudo :</string>
    <string name="save">Save</string>
    <string name="pseudo">Pseudo</string>
    <string name="update_scope">Update Your Scope</string>
    <string name="error_scope">Update your search scope in km. Actual ( %1$d km )</string>
    <string name="scope">Scope</string>
    <string name="your_liked_restaurants">Your Liked Restaurants :</string>
    <string name="pseudo_updated">Your pseudo has been updated</string>
    <string name="pseudo_dont_updated">Your pseudo hasn\'t been updated</string>
    <string name="setting">Setting</string>
    <string name="update_pseudo_layout">Update pseudo</string>
...

    <!-- Menu -->
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Notification -->
    <string name="notification_title">Don\’t forget your meal</string>
    <string name="notification_message">Today you eat at</string>
    <string name="notification_joining">This friends join you : </string>

...
